--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -42,6 +42,22 @@ body.dark {
   text-align: left;
 }
 
+.logo {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: var(--primary);
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.logo img {
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+}
+
+
 /* Section Divider */
 .section-divider {
   width: 100%;
