Bug fix - logo --> Logo

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar">
   <div class="logo">
-    <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo">
+    <img src="{{ url_for('static', filename='images/Logo.png') }}" alt="Logo">
     DataSavyWithSiddhesh
   </div>
   <ul class="nav-links">
