--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -209,6 +209,58 @@ p {
   font-weight: 600;
 }
 
+/* TimeLine --> EXPERIENCE */
+.timeline {
+  position: relative;
+  border-left: 3px solid var(--primary);
+  padding-left: 1rem;
+  margin-top: 2rem;
+}
+
+.timeline-item {
+  position: relative;
+  margin-bottom: 2.5rem;
+}
+
+.timeline-dot {
+  position: absolute;
+  top: 0;
+  left: -10px;
+  width: 16px;
+  height: 16px;
+  background-color: var(--primary);
+  border-radius: 50%;
+  box-shadow: 0 0 6px var(--primary);
+}
+
+.timeline-content {
+  margin-left: 0;
+  padding-left: 1rem;
+}
+
+.timeline-content h2 {
+  font-size: 1.1rem;
+  margin-bottom: 0.4rem;
+  color: var(--primary);
+  text-align: left;
+}
+
+.timeline-date {
+  font-size: 0.9rem;
+  color: var(--muted);
+  margin-bottom: 0.5rem;
+  display: block;
+  text-align: left;
+}
+
+.timeline-content p {
+  color: var(--text);
+  font-size: 0.95rem;
+  line-height: 1.6;
+  text-align: left;
+}
+
+
 /* Volunteering & Certifications */
 .vol-cert-grid {
   display: grid;
